# mitre-finance-databricks-demo

./: .gitignore  README.md  app.yml  components.json  databricks.yml  package.json  pyproject.toml  tsconfig.json
databricks/: README.md
databricks/data_contracts/: README.md  financial_health.md  government_relations.md  program_portfolio.md  risk_compliance.md  sponsor_funding.md
databricks/dlt_pipelines/: README.md  financial_health_pipeline.py  government_relations_pipeline.py  program_portfolio_pipeline.py  risk_compliance_pipeline.py  sponsor_funding_pipeline.py
databricks/genie_spaces/: README.md  create_spaces_now.py  setup_genie_spaces.py
databricks/seed_data/: 00_create_catalog_schemas.py  README.md  run_all_seeds.py  seed_financial_health.py  seed_government_relations.py  seed_program_portfolio.py  seed_risk_compliance.py  seed_sponsor_funding.py
databricks/uc_bootstrap/: 01_create_catalog_and_schemas.sql  02_create_shared_dimensions.sql  03_grant_permissions.sql  README.md
databricks/validation/: README.md  validate_gold_tables.py
src/financial_command_center/backend/: config.py  dependencies.py  models.py  router.py
src/financial_command_center/ui/: index.html
src/financial_command_center/ui/components/apx/: sidebar-user-footer.tsx
src/financial_command_center/ui/components/chat/: chat-context.tsx  genie-chat-popup.tsx  index.ts
src/financial_command_center/ui/lib/: api.ts
src/financial_command_center/ui/routes/: __root.tsx  index.tsx
src/financial_command_center/ui/types/: routeTree.gen.ts
(+93 files in other folders)
